crates/uitest/fixtures/ty_check/contract_effect_opt_in.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/contract_effect_opt_in.fe
---
error[8-0036]: missing effect `Ctx` required by `who_called`
  ┌─ contract_effect_opt_in.fe:9:9
  │
9 │         who_called()
  │         ^^^^^^^^^^^^ `who_called` requires effect `Ctx` to be in scope
  │
  = provide it with `with (Ctx = value)` or require it via `uses Ctx`
